# me-mkm-tiling

./: .gitignore  .graphifyignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
python/me_mkm/: __init__.py  coverage.py  export_graph.py  generator.py  graphing.py  memkm_viewer.html  microstates.py  observables.py  steady_state.py  tile.py  viewer.py
python/me_mkm/_me_mkm/: __init__.pyi
python/me_mkm/sparse/: __init__.py  committor.py  generator.py  metastable.py  observables.py  steady_state.py
python/me_mkm/tt/: __init__.py  committor.py  convert.py  observables.py  operator.py  solve.py
scripts/: regen_stubs.py
src/: lib.rs  memkm_rs_lib.rs
tests/: conftest.py  kmc.py  test_checkboard_superlattice.py  test_committor.py  test_derivatives.py  test_diagnostic.py  test_dynamic.py  test_tt_backend.py  test_tt_observables.py
