[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "me-mkm"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.5.0",
]

[dependency-groups]
# Optional dense/sparse backend (me_mkm.sparse): scipy sparse W assembly and
# the SuperLU steady-state solve. Installed via `uv sync --group scipy`.
scipy = [
    "scipy>=1.17",
]
# Optional tensor-train backend (me_mkm.tt). scikit_tt has no PyPI release,
# so it is pinned to a commit and installed only via `uv sync --group tt`.
tt = [
    "scikit-tt @ git+https://github.com/PGelss/scikit_tt@8f4b0a2420cbed8d56238f8751d920137a8f5a16",
]
dev = [
    "maturin>=1.14,<2",
    "notebook>=7.6.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
    { include-group = "scipy" },
]

[tool.maturin]
python-source = "python"
module-name = "me_mkm._me_mkm"
features = ["pyo3/extension-module"]

# Rebuild the extension when the Rust sources change (uv caches on these keys).
[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
