[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "me-mkm"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.4,<2.5",
]

[dependency-groups]
sparse = [
    "scipy>=1.17",
]

tt = [
    "torchtt>=0.4.0",
]

dev = [
    "maturin>=1.14,<2",
    "notebook>=7.6.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
    { include-group = "sparse" },
]

[tool.maturin]
python-source = "python"
module-name = "me_mkm._me_mkm"
features = ["pyo3/extension-module"]

# Rebuild the extension when the Rust sources change (uv caches on these keys).
[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
